# knncolle_hnsw

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Hnsw_8hpp_source.html  annotated.html  classes.html  classknncolle__hnsw_1_1HnswBuilder-members.html  classknncolle__hnsw_1_1HnswBuilder.html  classknncolle__hnsw_1_1HnswPrebuilt-members.html  classknncolle__hnsw_1_1HnswPrebuilt.html  classknncolle__hnsw_1_1HnswSearcher-members.html  classknncolle__hnsw_1_1HnswSearcher.html  classknncolle__hnsw_1_1ManhattanDistance-members.html  classknncolle__hnsw_1_1ManhattanDistance.html  classknncolle__hnsw_1_1SquaredEuclideanDistance-members.html  classknncolle__hnsw_1_1SquaredEuclideanDistance.html  dir_cadd6ac4def46fa7eba76dea44d656fb.html  distances_8hpp.html  distances_8hpp_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  knncolle__hnsw_8hpp.html  knncolle__hnsw_8hpp_source.html  knncolle_hnsw.tag  load__hnsw__prebuilt_8hpp.html  load__hnsw__prebuilt_8hpp_source.html  menudata.js  namespaceknncolle__hnsw.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  structknncolle__hnsw_1_1DistanceConfig-members.html  structknncolle__hnsw_1_1DistanceConfig.html  structknncolle__hnsw_1_1DistanceOptions-members.html  structknncolle__hnsw_1_1DistanceOptions.html  (+5 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  enums_0.js  files_1.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+16 more)
include/knncolle_hnsw/: Hnsw.hpp  distances.hpp  knncolle_hnsw.hpp  load_hnsw_prebuilt.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: Hnsw.cpp  TestCore.h  load_hnsw_prebuilt.cpp
